--- a/index.css
+++ b/index.css
@@ -2,10 +2,61 @@ html {
   --color-backgroud: rgb(51, 48, 48);
   --color-headings: rgb(133, 125, 125);
   --color-others: rgb(206, 195, 195);
+  --color-backdrop: rgba(51, 48, 48, 0.8);
 }
 
 body {
   margin: 0;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--color-backdrop);
+  width: 100%;
+  height: 100%;
+}
+
+.player-modal {
+  position: fixed;
+  text-align: center;
+  background-color: var(--color-others);
+  left: 20%;
+  right: 20%;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.player-modal h2 {
+  margin: 0;
+  color: var(--color-backgroud);
+  font-size: 2rem;
+}
+
+aside form {
+  padding: 20px 0;
+}
+
+aside form label {
+  font-size: 1.2rem;
+  color: var(--color-backdrop);
+}
+
+aside form input {
+  display: block;
+  margin: auto;
+  color: var(--color-backgroud);
+  padding: 10px 5px;
+  border: 1px solid rgb(51, 48, 48);
+  border-radius: 4px;
+  font-size: 1rem;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.player-modal .player-modal-btns {
+  margin: 2px;
 }
 
 header {
@@ -73,7 +124,7 @@ header p {
   color: var(--color-others);
 }
 
-.start-game-btn {
+.btn {
   background-color: var(--color-backgroud);
   border: 0;
   border-radius: 5px;
@@ -83,8 +134,20 @@ header p {
   padding: 10px 30px;
 }
 
-.start-game-btn:hover {
+.btn:hover {
   background-color: var(--color-headings);
   color: var(--color-backgroud);
   cursor: pointer;
+}
+
+@media (min-width: 850px) {
+  .player-modal {
+    left: 25%;
+    right: 25%;
+  }
+
+  aside form input {
+    width: 60%;
+    box-sizing: border-box;
+  }
 }
