--- a/index.css
+++ b/index.css
@@ -26,6 +26,11 @@ body h3 {
 body p {
   font-size: var(--font-p);
 }
+body span {
+  font-size: var(--font-h1);
+  color: var(--color-others);
+  text-shadow: 2px 4px 10px var(--color-others);
+}
 
 .backdrop {
   display: none;
@@ -170,6 +175,7 @@ header p {
 }
 
 .game-status {
+  display: none;
   background-color: var(--color-backgroud);
   text-align: center;
   margin: 20px 5%;
@@ -181,10 +187,41 @@ header p {
   color: var(--color-others);
 }
 
-.game-status .winner-name {
-  font-size: var(--font-h1);
+.game {
+  text-align: center;
+  padding-top: 20px;
+}
+
+.game .player-turn {
+  color: var(--color-backgroud);
+  text-shadow: 0 2px 8px var(--color-backgroud);
+}
+
+.game-board {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(3, 7rem);
+  grid-template-rows: repeat(3, 7rem);
+  gap: 5px;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+
+.game-board li {
+  background-color: var(--color-backgroud);
+  cursor: pointer;
   color: var(--color-others);
-  text-shadow: 2px 4px 10px var(--color-others);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: calc(var(--font-h1) * 1.5);
+}
+.game-board li:hover {
+  background-color: var(--color-headings);
+}
+.game-board li.disabled {
+  background-color: var(--color-headings);
 }
 
 @media (min-width: 850px) {
@@ -226,6 +263,15 @@ header p {
 
   .btn {
     font-size: calc(var(--font-p) * 1.5);
+  }
+
+  .game-board {
+    grid-template-columns: repeat(3, 9rem);
+    grid-template-rows: repeat(3, 9rem);
+  }
+
+  .game-board li {
+    font-size: calc(var(--font-h1) * 2);
   }
 }
 
